# gerbil

./: .gitignore  gerbil.py  pyproject.toml  setup.py
src/gerbil/: __init__.py  gerbil.py
